# gamesneeze

./: .gitignore  CMakeLists.txt  CONTRIBUTORS  LICENSE  PKGBUILD  README.md  build.sh  gamesneeze.desktop  inject.sh  readme.md  toolbox.sh  uninject.sh
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml  config.yml  issue.bug.md  issue.feature.md
.github/workflows/: build.yml  cmake.yml
res/: gamesneeze.xcf
src/: includes.hpp  main.cpp
src/core/features/: antiaim.cpp  autoaccept.cpp  autodefuse.cpp  autohop.cpp  backtrack.cpp  beemovie.hpp  blockbot.cpp  bullettracers.cpp  chams.cpp  clantag.cpp  damagelist.cpp  edgejump.cpp  esp.cpp  fastduck.cpp  features.hpp  flappybird.cpp  forwardtrack.cpp  hitmarkers.cpp  jumpbug.cpp  legitbot.cpp  movement.cpp  nightmode.cpp  noVisualRecoil.cpp  noflash.cpp  notifications.cpp  novisualrecoil.cpp  playerlist.cpp  prediction.cpp  radar.cpp  ragdollGravity.cpp  ragebot.cpp  rankrevealer.cpp  recoilCrosshair.cpp  skinchanger.cpp  skyboxchanger.cpp  slowwalk.cpp  spectators.cpp  triggerbot.cpp  usespam.cpp  voterevealer.cpp  (+1 more)
src/core/hooks/: clientcmd.cpp  createmove.cpp  drawmodelexecute.cpp  emitsound.cpp  events.cpp  framestagenotify.cpp  getviewmodelfov.cpp  hooks.cpp  hooks.hpp  ishltv.cpp  overrideview.cpp  paint.cpp  painttraverse.cpp  sdlhook.cpp  vmt.cpp  vmt.hpp
src/core/menu/: config.hpp  customwidgets.cpp  menu.cpp  menu.hpp  overlay.cpp  roboto.hpp
src/core/menu/imgui/: imgui.cpp  imgui.h  imgui_impl_sdl.cpp
src/core/menu/tabs/: devwindow.cpp  legit.cpp  misc.cpp  rage.cpp  visuals.cpp
src/sdk/: classids.hpp  definitions.hpp  math.cpp  math.hpp  netvars.cpp  netvars.hpp  sdk.hpp
src/sdk/classes/: entities.cpp  entity.cpp  entity.hpp  keyvalues.hpp  player.hpp  vector.h
src/sdk/interfaces/: globalvars.hpp  iappsystem.hpp  ibaseclientdll.hpp  icliententitylist.hpp  iclientmode.hpp  icvar.hpp  ienginesound.hpp  ienginetrace.hpp  ienginevgui.hpp  igameevent.hpp  iinputsystem.hpp  imaterialsystem.hpp  input.hpp  interfaces.cpp  interfaces.hpp  ipanel.hpp  iprediction.hpp  ivengineclient.hpp  iviewrenderbeams.hpp  ivmodelinfo.hpp  ivmodelrender.hpp  playerResource.hpp
src/utils/: log.cpp  patternscanning.cpp  textmanipulation.cpp  utils.hpp
